// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge should render 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 iNGskz flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <span />
  </span>
</div>
`;

exports[`Badge should render with icon 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 iNGskz flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdnxRM AkeAK"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'bottom' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 dpQfhp flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdnxRM AkeAK"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'bottom-left' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 bSevwp flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdnxRM AkeAK"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'bottom-right' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 iNGskz flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdnxRM AkeAK"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'left' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 gabKEB flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdnxRM AkeAK"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'right' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 jbGbCf flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdnxRM AkeAK"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'top' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 eompIQ flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdnxRM AkeAK"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'top-left' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 jqYKJI flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdnxRM AkeAK"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'top-right' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 iMGUIG flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdnxRM AkeAK"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with size 'lg' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 huiJhL flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdnxRM AkeAK"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with size 'md' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 iNGskz flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdnxRM AkeAK"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;
